2022-03-06:

	1.10.0 released.

	* Updated mt32emu library to version 2.6.0.
	* Improved emulation of the MT-32 display. It now behaves a lot closer to the real device.
	  The new behaviour depends on the control ROM version, so that the most prominent quirks
	  are now emulated. Additionally, the LCD shows the startup banner and the SysEx checksum
	  error. The built-in LCD font has been reworked as well to closely match the hardware one
	  yet the new appearance makes the grid of pixels visible. Clicking on the LCD now resets
	  it to the main (Master Volume) mode. (#50, #66)
	* Introduced a floating window that represents the emulated LCD and the MIDI MESSAGE LED
	  only. It is implicitly configured to be always-on-top, can be freely moved and resized.
	  Also, its opacity can be adjusted, if supported by the platform. By default, the new window
	  shows up when the main window is hidden. This behaviour can be altered in the main menu
	  / Options / Floating Display. (#50)
	* Enabled the built-in Qt support for high-dpi displays which should improve the UI look
	  on Windows systems mainly. The Qt library version 5.6 or above is required for this
	  function to work. In order to explicitly disable UI scaling, the user may set environment
	  variable QT_AUTO_SCREEN_SCALE_FACTOR to 0. (#79)
	* Changed layout of partial state LEDs in the grid to ensure that no more than 8 LED widgets
	  are placed in a column. Previously, the layout grew vertically for some configured partial
	  counts, rendered the channel status grid looking weird. Additionally, this helps the Qt
	  layout calculator to work correctly with a high-dpi UI scaling on some systems.
	* Fixed the standard MIDI file player occasionally failing to send all-sound-off sequence
	  when stopping playback; also, ensured that all played MIDI events get processed. (#80)
	* In the synth details panel, added a small button to the left of the instrument name for