@@ -19,7 +19,9 @@ else()
   set(LINUX_FOUND FALSE)
 endif()
 
-option(mt32emu-qt_WITH_QT5 "Prefer Qt5 if Qt4 is also available (prefer Qt4 otherwise)" TRUE)
+set(mt32emu-qt_WITH_QT_VERSION AUTO CACHE STRING "Use the Qt library major version (supported range is 4..6); useful when multiple versions are available in the system")
+set_property(CACHE mt32emu-qt_WITH_QT_VERSION PROPERTY STRINGS AUTO 4 5 6)
+
 option(mt32emu-qt_WITH_ALSA_MIDI_SEQUENCER "Use ALSA MIDI sequencer" ${LINUX_FOUND})
 option(mt32emu-qt_USE_PULSEAUDIO_DYNAMIC_LOADING "Load PulseAudio library dynamically" TRUE)
 option(mt32emu-qt_WITH_DEBUG_WINCONSOLE "Use console for showing debug output on Windows" FALSE)
@@ -120,38 +122,62 @@ else()
   endif(CLOCK_NANOSLEEP_FOUND)
 endif()
 
-if(mt32emu-qt_WITH_QT5)
+if(mt32emu-qt_WITH_QT_VERSION EQUAL 6)
+  find_package(Qt6Widgets REQUIRED CONFIG)
+elseif(mt32emu-qt_WITH_QT_VERSION EQUAL 5)
+  find_package(Qt5Widgets REQUIRED CONFIG)
+elseif(mt32emu-qt_WITH_QT_VERSION EQUAL 4)
+  find_package(Qt4 4.5.3 MODULE REQUIRED)
+elseif(NOT DEFINED mt32emu-qt_WITH_QT5)
+  find_package(Qt6Widgets CONFIG)
+  if(NOT Qt6Widgets_FOUND)
+    find_package(Qt5Widgets CONFIG)
+    if(NOT Qt5Widgets_FOUND)
+      find_package(Qt4 4.5.3 MODULE)
+      if(NOT Qt4_FOUND)
+        message(FATAL_ERROR "Not found any version of the Qt library")
+      endif()
+    endif()
+  endif()
+elseif(mt32emu-qt_WITH_QT5)
   find_package(Qt5Widgets CONFIG)
   if(NOT Qt5Widgets_FOUND)
     find_package(Qt4 4.5.3 MODULE REQUIRED)
   endif()
-else(mt32emu-qt_WITH_QT5)
+else()
   find_package(Qt4 4.5.3 MODULE)
   if(NOT Qt4_FOUND)
     find_package(Qt5Widgets REQUIRED CONFIG)
   endif()
-endif(mt32emu-qt_WITH_QT5)
+endif()
 
-if(Qt5Widgets_FOUND)
+if(Qt6Widgets_FOUND)
+  list(APPEND EXT_LIBS Qt6::Widgets)
+  find_package(Qt6Multimedia QUIET CONFIG)
+  message(STATUS "Found Qt6Core version ${Qt6Core_VERSION}, C++11 required")
+  set(mt32emu-qt_REQUIRED_CPP11 True)
+elseif(Qt5Widgets_FOUND)
   list(APPEND EXT_LIBS Qt5::Widgets)
   find_package(Qt5Multimedia QUIET CONFIG)
   if(NOT(Qt5Core_VERSION VERSION_LESS 5.7.0))
     message(STATUS "Found Qt5Core version ${Qt5Core_VERSION}, C++11 required")
     set(mt32emu-qt_REQUIRED_CPP11 True)
   endif()
-else(Qt5Widgets_FOUND)
+else()
   list(APPEND EXT_LIBS Qt4::QtGui)
-endif(Qt5Widgets_FOUND)
+endif()
 
-if(QT_QTMULTIMEDIA_FOUND OR Qt5Multimedia_FOUND)
+if(QT_QTMULTIMEDIA_FOUND OR Qt5Multimedia_FOUND OR Qt6Multimedia_FOUND)
   add_definitions(-DWITH_QT_AUDIO_DRIVER)
   list(APPEND mt32emu_qt_SOURCES src/audiodrv/QtAudioDriver.cpp)
-  if(Qt5Multimedia_FOUND)
+  if(Qt6Multimedia_FOUND)
+    list(APPEND EXT_LIBS Qt6::Multimedia)
+  elseif(Qt5Multimedia_FOUND)
     list(APPEND EXT_LIBS Qt5::Multimedia)
   else()
     list(APPEND EXT_LIBS Qt4::QtMultimedia)
   endif()
-elseif(NOT Qt5Widgets_FOUND)
+elseif(Qt4_FOUND)
   find_package(QtMobility MODULE)
   if(QT_MOBILITY_MULTIMEDIAKIT_FOUND)
     add_definitions(-DWITH_QT_AUDIO_DRIVER -DUSE_QT_MULTIMEDIAKIT)
@@ -232,9 +258,12 @@ endif()
 if(Qt4_FOUND)
   qt4_add_resources(mt32emu_qt_RC ${mt32emu_qt_RESOURCES})
   qt4_wrap_ui(mt32emu_qt_FORMS_HEADERS ${mt32emu_qt_FORMS})
-else()
+elseif(Qt5Widgets_FOUND)
   qt5_add_resources(mt32emu_qt_RC ${mt32emu_qt_RESOURCES})
   qt5_wrap_ui(mt32emu_qt_FORMS_HEADERS ${mt32emu_qt_FORMS})
+else()
+  qt6_add_resources(mt32emu_qt_RC ${mt32emu_qt_RESOURCES})
+  qt6_wrap_ui(mt32emu_qt_FORMS_HEADERS ${mt32emu_qt_FORMS})
 endif()
 
 set(CMAKE_AUTOMOC ON)
