@@ -317,7 +317,11 @@ void MidiConverterDialog::dropEvent(QDropEvent *e) {
 		return;
 	}
 
+#if (QT_VERSION < QT_VERSION_CHECK(6, 0, 0))
 	const QPoint pos = e->pos();
+#else
+	const QPoint pos = e->position().toPoint();
+#endif
 	const bool dropToMidiList = ui->midiList->geometry().contains(pos);
 	if (!dropToMidiList) {
 		newPcmFileGroup(fileNames);
