@@ -1,3 +1,7 @@
+HEAD:
+
+	* Updated for compatibility with the Qt framework versions 6.0 and above.
+
 2022-03-06:
 
 	1.10.0 released.
